--- a/LineUpBot/appsettings.Development.json
+++ b/LineUpBot/appsettings.Development.json
@@ -5,9 +5,8 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "ConnectionStrings": {
-        //"DefaultConnectionString": "server=.;database=TelegramBot;TrustServerCertificate=True;Encrypt=False;persist security info=true;user id=sa;password=minzdrav1+;",
-        //"DefaultConnectionString": "server=.;database=TelegramBot;TrustServerCertificate=True;Encrypt=False;persist security info=true;user id=sa;password=minzdrav1+;",
-        "DefaultConnectionString": "server=host.docker.internal,1433;database=TelegramBot;TrustServerCertificate=True;Encrypt=False;persist security info=true;user id=sa;password=minzdrav1+;"
-    }
+  "ConnectionStrings": {
+    //"DefaultConnectionString": "server=host.docker.internal,1433;Port=5432;Database=DbTelegramBot;Username=postgres;Password=minzdrav1+;"
+    "DefaultConnectionString": "Host=localhost;Port=5432;Database=DbTelegramBot;Username=postgres;Password=minzdrav1+;"
+  }
 }
