--- a/LineUpBot/appsettings.Development.json
+++ b/LineUpBot/appsettings.Development.json
@@ -6,7 +6,7 @@
         }
     },
   "ConnectionStrings": {
-    //"DefaultConnectionString": "server=host.docker.internal,1433;Port=5432;Database=DbTelegramBot;Username=postgres;Password=minzdrav1+;"
-    "DefaultConnectionString": "Host=localhost;Port=5432;Database=DbTelegramBot;Username=postgres;Password=minzdrav1+"
+    "DefaultConnectionString": "server=host.docker.internal,1433;Port=5432;Database=DbTelegramBot;Username=postgres;Password=minzdrav123;"
+    //"DefaultConnectionString": "Host=localhost;Port=5432;Database=DbTelegramBot;Username=postgres;Password=minzdrav1+"
   }
 }
