--- a/LineUpBot/appsettings.json
+++ b/LineUpBot/appsettings.json
@@ -6,8 +6,8 @@
         }
     },
   "ConnectionStrings": {
-    //"DefaultConnectionString": "server=host.docker.internal,1433;database=DbTelegramBot;TrustServerCertificate=True;Encrypt=False;persist security info=true;user id=sa;password=minzdrav1+;"
-    "DefaultConnectionString": "Host=postgres;Port=5432;Database=DbTelegramBot;Username=postgres;Password=minzdrav1+"
+    "DefaultConnectionString": "server=host.docker.internal,1433;Port=5432;Database=DbTelegramBot;Username=postgres;Password=minzdrav123;"
+    //"DefaultConnectionString": "Host=postgres;Port=5432;Database=DbTelegramBot;Username=postgres;Password=minzdrav1+"
   },
     "AllowedHosts": "*"
 }
